<resources>
    <string name="app_name">Lesson02</string>
    <string name="main_menu">Main Menu</string>
    <string name="task01">Task01</string>
    <string name="task02">Task02</string>
    <string name="task03">Task03</string>
    <string name="task04">Task04</string>
    <string name="back">Main Menu</string>
    <string name="default_message">Исходное сообщение</string>
    <string name="next">Далее</string>
    <string name="edit">Редактирование</string>
    <string name="save">Сохранить</string>
    <string name="toast_empty_error">Сообщение не должно быть пустым</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="activity_life_cycle">Activity LifeCycle</string>
    <string name="fragment_life_cycle">Fragment LifeCycle</string>
    <string name="activity_on_create_called">activity: onCreate()</string>
    <string name="activity_on_start_called">activity: onStart()</string>
    <string name="activity_on_resume_called">activity: onResume()</string>
    <string name="activity_on_pause_called">activity: onPause()</string>
    <string name="activity_on_stop_called">activity: onStop()</string>
    <string name="activity_on_restart_called">activity: onRestart()</string>
    <string name="activity_on_destroy_called">activity: onDestroy()</string>
    <string name="fragment_on_create_called">fragment: onCreate()</string>
    <string name="fragment_on_create_view_called">fragment: onCreateView()</string>
    <string name="fragment_on_view_created_called">fragment: onViewCreated()</string>
    <string name="fragment_on_start_called">fragment: onStart()</string>
    <string name="fragment_on_resume_called">fragment: onResume()</string>
    <string name="fragment_on_pause_called">fragment: onPause()</string>
    <string name="fragment_on_stop_called">fragment: onStop()</string>
    <string name="fragment_on_destroy_view_called">fragment: onDestroyView()</string>
    <string name="fragment_on_destroy_called">fragment: onDestroy()</string>
    <string name="lifecycle">%1$s \n\n %2$s </string>
</resources>
