<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".task04.MainActivityTask04">

    <LinearLayout
        android:id="@+id/task4_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/task_title"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:text="@string/task04" />

        <TextView
            android:id="@+id/fragment_life_cycle_title"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@color/yellow"
            android:text="@string/fragment_life_cycle" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerViewFragmentLifeCycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_life_cycle_title"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@color/yellow"
            android:text="@string/activity_life_cycle" />

        <TextView
            android:id="@+id/activity_life_cycle"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:text="@string/back" />

    </LinearLayout>

</ScrollView>
